Add fmt library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,6 @@ token.cpp
 
 add_executable(lox ${SRC_FILES})
 set_target_properties(lox PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 target_precompile_headers(lox PRIVATE pch.hpp)
+target_link_libraries(lox PRIVATE fmt::fmt)
