--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/debug/lox",
-            "args": ["test/logical.lox"],
+            "args": ["test/while.lox"],
             "cwd": "${workspaceFolder}",
             "MIMode": "lldb",
             "externalConsole": true,
